[package]
name = "rstd"
version = "0.1.0"
authors = ["samuelhnrq"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["sqlite", "chrono"] }
fern = { version = "0.6", features = ["colored"] }
serde_yaml = "0.8"
clap = "2.33"
log = "0.4"
